--- a/package.json
+++ b/package.json
@@ -12,3 +12,10 @@
     "jest": "^29.6.0"
   }
 }
+{
+  "scripts": {
+    "setup": "npm install",
+    "test": "jest",
+    "pretest": "npm install"
+  }
+}
