--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
   "description": "PWA Plataforma de Vendas com Firebase",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build:css": "tailwindcss -i ./src/input.css -o ./dist/styles.css --minify"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "autoprefixer": "^10.4.21",
+    "jest": "^29.7.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11"
   }
 }
