--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build:css": "tailwindcss -i ./src/input.css -o ./dist/styles.css --minify"
+    "build:css:dist": "tailwindcss -i ./src/input.css -o ./dist/styles.css --minify",
+    "build:css:root": "npx tailwindcss -i ./input.css -o ./styles.css --minify",
+    "build:css": "postcss input.css -o styles.css --verbose"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "autoprefixer": "^10.4.21",
     "jest": "^29.7.0",
     "postcss": "^8.5.6",
+    "postcss-cli": "^11.0.1",
     "tailwindcss": "^4.1.11"
   }
 }
