--- a/package.json
+++ b/package.json
@@ -4,19 +4,11 @@
   "description": "PWA Plataforma de Vendas com Firebase",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "build:css:dist": "tailwindcss -i ./src/input.css -o ./dist/styles.css --minify",
-    "build:css:root": "npx tailwindcss -i ./input.css -o ./styles.css --minify",
-    "build:css": "postcss ./src/input.css -o ./dist/styles.css --minify"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "jest": "^29.7.0",
-    "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1",
-    "tailwindcss": "^4.1.11"
+    "jest": "^29.6.0"
   }
 }
